--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,6 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Correo: remjgr@gmail.com
-    </h1>
+    <h1>Correo: remjgr@gmail.com</h1>
 </body>
 </html>
